<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/manage_permissions_button"
        android:title="@string/manage_permissions_button"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/settings_button"
        android:title="@string/settings_button"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/liability_agreement_button"
        android:title="@string/liability_disclaimer_button"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/about_button"
        android:title="@string/about_button"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/debug_button"
        android:title="@string/debug_button"
        app:showAsAction="never"
        />

</menu>