<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingBottom="8dp"
        android:paddingHorizontal="12dp"
        android:textColor="?colorSecondary"
        style="?textAppearanceLabelLargeEmphasized"
        android:text="@string/links_header"
        />

    <TextView
        android:id="@+id/source_code_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        style="?textAppearanceListItem"
        android:text="@string/source_code_link_button"
        />

    <TextView
        android:id="@+id/wiki_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        style="?textAppearanceListItem"
        android:text="@string/wiki_link_button"
        />

    <TextView
        android:id="@+id/license_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        style="?textAppearanceListItem"
        android:text="@string/license_link_button"
        />

    <TextView
        android:id="@+id/issue_tracker_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        style="?textAppearanceListItem"
        android:text="@string/issue_tracker_link_button"
        />

</LinearLayout>