<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    >

    <LinearLayout
        android:id="@+id/moving_info_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="UselessParent"
        >

        <TextClock
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:format12Hour="@string/minimal_time_format_12_hour"
            android:format24Hour="@string/minimal_time_format_24_hour"
            style="?textAppearanceHeadline1"
            />

        <TextClock
            android:id="@+id/date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:format12Hour="@string/minimal_date_format"
            android:format24Hour="@string/minimal_date_format"
            style="?textAppearanceSubtitle1"
            />

    </LinearLayout>

</FrameLayout>